--- a/kadai_005/kadai_005.ipynb
+++ b/kadai_005/kadai_005.ipynb
@@ -18,20 +18,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KzFAvlozGSev",
-        "outputId": "19f8bde7-6714-4ed8-911d-574750d62d21"
+        "outputId": "b4f8c3ac-6fba-4e46-9daa-0e1867570fa9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "75.0\n"
+            "75.0cm²\n"
           ]
         }
       ],
@@ -42,7 +42,7 @@
         "\n",
         "trape_zoid = (top_side + down_side)*height/2\n",
         "\n",
-        "print(trape_zoid)"
+        "print(f\"{trape_zoid}cm²\")"
       ]
     }
   ]
