--- a/kadai_015/kadai_015.ipynb
+++ b/kadai_015/kadai_015.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8kZyhVoQZDzr",
-        "outputId": "dac6bca1-8dab-4ef5-ea0b-06f8f3b3b8f9"
+        "outputId": "c6b20196-0ef8-4b6f-a235-fee4d74eed1f"
       },
       "outputs": [
         {
@@ -38,11 +38,11 @@
         "  def __init__(self,name:str,age:int):\n",
         "    self.name=name\n",
         "    self.age=age\n",
-        "  def print_human(self):\n",
+        "  def printinfo(self):\n",
         "    print(f\"名前:{self.name},年齢:{str(self.age)}歳\")\n",
         "\n",
         "information = Human(\"高橋淳\",27)\n",
-        "information.print_human()"
+        "information.printinfo()"
       ]
     }
   ]
